--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ PvP101/bin/Debug/Mono.Data.Sqlite.dll
 PvP101/bin/Debug/MySql.Data.dll
 PvP101/bin/Debug/Newtonsoft.Json.dll
 PvP101/bin/Debug/TShockAPI.dll
+PvP101/bin/Debug/TerrariaServer.exe
